--- a/Web Technology/LAB 2/NumberInWords.html
+++ b/Web Technology/LAB 2/NumberInWords.html
@@ -18,3 +18,16 @@ if it is not a number ,it should show “not a number” message in the result b
     </script>
 </body>
 </html>
+
+
+//one =a
+//ten twenty=b
+//one hundered=c
+//number n 
+//compare above abc charat charat012
+//a.lenght==1 b and c =0 a=a.length(0)
+//a.length==2 c=0 a same b charat(1)
+//
+
+
+//
