--- a/Web Technology/LAB 4/DisplayProduct.html
+++ b/Web Technology/LAB 4/DisplayProduct.html
@@ -621,8 +621,8 @@
 
       document.write("<td>" + Faculty[i].name + "</td>");
 
+      // document.write("<td><img src="+Faculty[i].avatar+" ></td>")
       document.write(`<td><img src=${Faculty[i].avatar}></td>`)
-
       document.write("<td>" + Faculty[i].City + "</td>");
 
       document.write("<td>" + Faculty[i].MobileNumber + "</td>");
