--- a/Web Technology/LAB 2/Pattern3.html
+++ b/Web Technology/LAB 2/Pattern3.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pattere</title>
+    <title>Pattern</title>
 </head>
+
 <body>
     <script>
-        let n  = 5;
-        for(i=1;i<=5;i++){
-            for(j=1;j<=5;j++){
-                if(i+j>=n+1){
-                document.write("*&nbsp")
+        let n = 5;
+        for (i = 1; i <= 5; i++) {
+            for (j = 1; j <= 5; j++) {
+                if (i + j >= n + 1) {
+                    document.write("*&nbsp")
+                }
+
+                else {
+                    document.write("&nbsp")
+                }
+
             }
-        
-        else{
-            document.write("&nbsp")
+            document.write("</br>")
         }
-            
-        }
-        document.write("</br>")
-    }
     </script>
 </body>
+
 </html>
