--- a/Web Technology/LAB 6/MouseEvent.html
+++ b/Web Technology/LAB 6/MouseEvent.html
@@ -12,7 +12,7 @@
     <button onmousemove="four()">Click on me!!</button>
     <button onmouseover="five()">Click on me!!</button>
     <button onmouseout="six()">Click on me!!</button>
-     <button onmouseup="seven()">Click on me!!</button>
+    <button onmouseup="seven()">Click on me!!</button>
     <script>
         function one(){
             alert("You clicked one time");
@@ -33,7 +33,7 @@
             alert("you out mouse")
         }
         function seven(){
-            alert
+            alert("you up mouse")
         }
     </script>
 </body>
