--- a/Web Technology/LAB 5/Form.html
+++ b/Web Technology/LAB 5/Form.html
@@ -19,25 +19,25 @@
             <div class="Password">
                 <tr>
                     <td>Enter Password</td>
-                    <td><input type="password" placeholder="Enter Password"/></td>
+                    <td><input type="password" id="password" placeholder="Enter Password"/></td>
                 </tr>
             </div>
             <div class="Re-Password">
                 <tr>
                     <td>Re-Enter Password</td>
-                    <td><input type="password" placeholder="Re-Enter Password"/></td>
+                    <td><input type="password" placeholder="Re-Enter Password" id="Re-Password"/></td>
                 </tr>
             </div>
             <div class="Birth-Date">
                 <tr>
                     <td>Birth-Date</td>
-                    <td><input type="date" placeholder="Enter Your Birth-date"/></td>
+                    <td><input type="date" placeholder="Enter Your Birth-date" id="Birth-Date"/></td>
                 </tr>
             </div>
             <div class="Enrollnment">
                 <tr>
                     <td>Enter Enrollnment Number</td>
-                    <td><input type="text" placeholder="Enter Enrollnment Number"/></td>
+                    <td><input type="text" placeholder="Enter Enrollnment Number" id="Enrollnment"/></td>
                 </tr>
             </div>
             <div class="E-mail">
@@ -48,24 +48,53 @@
             </div>
             <div class="submit" >
                 <tr>
-                    <td><input type="submit" id="submit" onclick=checkmail()/></td>
+                    <td><input type="submit" id="submit" onclick="allcheck()"/></td>
                 </tr>
             </div>
         </table>
     </form>
 
     <script>
-        function checkmail(){
-            var a = document.getElementById("E-mail").value;
-           
-            var regex  = new Regex(pattern);
-            
-            if(regex.test(a)){
-                alert("valid");
 
+        let a = document.getElementById('Username');
+        let b = document.getElementById('password');
+        let rb = document.getElementById('Re-Password');
+        let d = document.getElementById('Enrollnment');
+        let e = document.getElementById('E-mail');
+        function allcheck(){
+            check();
+            age();
+        }
+
+        function check(){
+            let userpattern = /^[a-zA-Z0-9]{8,}$/;
+            let passwordpattern = /^(?=.*[a-zA-Z])(?=.*[0-9])(?=.*[!@#$%^&*]).{8,12}$/;
+            let Enrollnmentpattern = /^2301[0-9]{7}$/;
+            let emailpattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+
+            if(!userpattern.test(a.value)){
+                alert("enter valid user name");
             }
-            else{
-                alert("Invalid");
+            if(!passwordpattern.test(b.value)){
+                alert("Enter valid password");
+            }
+            if(b.value != rb.value){
+                alert("RE enter password is wrong");
+            }
+            if(!emailpattern.test(e.value)){
+                alert("E mail is not valid");
+            }
+            if(!Enrollnmentpattern.test(d.value)){
+                alert("Enrollment number is wrong");
+            }
+        }
+        function age(){
+            let DOB = new Date(document.getElementById('Birth-Date').value);
+            let today = new Date();
+            let age = today.getFullYear() - DOB.getFullYear();
+
+            if(age<18){
+                alert("age is not valid")
             }
         }
     </script>
