--- a/Web Technology/LAB 6/StudentRegistration.html
+++ b/Web Technology/LAB 6/StudentRegistration.html
@@ -1,13 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
 </head>
+
 <body>
     <form>
-        
+        <h1 align="center">Student Registration</h1>
+        <table align="center" cellspacing="20">
+            <tr>
+                <td>Full Name</td>
+                <td><input type="text" id="name"></td>
+            </tr>
+            <tr>
+                <td>Email :</td>
+                <td><input type="text" id="email"></td>
+            </tr>
+            <tr>
+                <td>Mobile No</td>
+                <td><input type="text" size="10" id="Mobile"></td>
+            </tr>
+            <tr>
+                <td>Address</td>
+                <td><textarea name="text" rows="5" cols="5"></textarea></td>
+            </tr>
+            <tr>
+                <td>Password</td>
+                <td><input type="text" id="password"></td>
+            </tr>
+
+
+            <tr>
+                <td><button onclick="validation()">submit</button></td>
+            </tr>
+        </table>
     </form>
+
+    <script>
+        function validation() {
+            email = /^[a-zA-Z0-9]+@[a-zA-Z]+\.[a-zA-Z]{2}$/
+            email2 = document.getElementById('email').value
+            Regexp = new RegExp(email)
+            if (Regexp.test(email2)) {
+
+            }
+            else {
+                Swal.fire({
+                    icon: "error",
+                    title: "Oops...",
+                    text: "E-Mail Format is Wrong",
+                    footer: '<a href="#">Why do I have this issue?</a>'
+                });
+                return
+            }
+
+            username = /^[a-zA-Z]{8,}$/
+            username2 = document.getElementById('name').value
+            Regexp2 = new RegExp(username)
+            if (Regexp2.test(username2)) {
+
+            }
+            else {
+                Swal.fire({
+                    icon: "error",
+                    title: "Oops...",
+                    text: "Invalid username",
+                    footer: '<a href="#">Why do I have this issue?</a>'
+                });
+                return
+
+            }
+
+            password = /^(?=.[a-zA-Z])(?=.[0-9])(?=.[!@#$%^&]).{8,12}$/
+            password2 = document.getElementById('password').value
+            Regexp3 = new RegExp(password)
+            if (Regexp3.test(password2)) {
+
+            }
+            else {
+                Swal.fire({
+                    icon: "error",
+                    title: "Oops...",
+                    text: "Invalid Password",
+                    footer: '<a href="#">Why do I have this issue?</a>'
+                });
+                return
+            }
+        }
+    </script>
 </body>
+
 </html>
+
+
+    <!-- let namepatt = /^[a-zA-Z]{8,}$/
+    let enrlpatt = /^2301[0,9]{7}$/
+    let mailpatt = /^[a-zA-Z0-9]+@[a-zA-Z]+\.[a-zA-Z]{2}$/
+    let passpat = /^(?=.[a-zA-Z])(?=.[0-9])(?=.[!@#$%^&]).{8,12}$/
+    let phpatt = /^[0-9]{10}$/ -->
